-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0 Beta
-
None
-
Kubuntu 14.04 LTS/64bit
Found while mass-testing 5.4 beta examples:
- The binary is (inconsistently) named "qml_position_flickr" (Suggest to either rename the example directory or the binary)
- Launching it reports
Error FODC0002 in tag:trolltech.com,2007:QtXmlPatterns:QIODeviceVariable:src, at line 2, column 39: XML declaration not at sof document.