Rename positioning/flickr example to geoflickr

This makes it more compliant with standard naming conventions and more
easily distinguishes this example from flickr examples in other modules.

Task-number: QTBUG-41831
Change-Id: Id4953777326a0463d57d52df92c70860addc61ff
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>