examples/positioning/positioning.pro
@@ -1,4 +1,4 @@
 TEMPLATE = subdirs
 
 qtHaveModule(widgets): SUBDIRS += logfilepositionsource
-qtHaveModule(quick): SUBDIRS += flickr weatherinfo satelliteinfo
+qtHaveModule(quick): SUBDIRS += geoflickr weatherinfo satelliteinfo
